--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,8 @@
+<div style="text-align: center;">
+    <h2>{{ title }}</h2>
+    <hr />
+</div>
+<br />
 <button (click)="getSelectedRows()">Get Selected Rows</button>
 <ag-grid-angular #agGrid style="width: 600px; height: 1050px;" class="ag-theme-balham" [autoGroupColumnDef]="autoGroupColumnDef" [enableSorting]="true" [enableFilter]="true" [rowData]="rowData" [columnDefs]="columnDefs" rowSelection="multiple">
 </ag-grid-angular>
